--- a/style.css
+++ b/style.css
@@ -16,15 +16,18 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 
 
 .selection-container{
-	width: 50%;
+    width: 100%;
+    color: #fff;
+    font-family: 'poppins';
 }
 
 .selection-container{
 	padding-left: 100px;
 }
 
-.package-detail{
-	font-size: 1rem;
+.box-service-name p{
+    font-size: 14px;
+    
 }
 
 .selection-container label{
@@ -39,6 +42,10 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 	font-weight: 600;
 }
 
+.selection-container .headings p {
+    font-size: 17px;
+    font-family: 'poppins';
+}
 
 /* style for selection package */
 
@@ -107,8 +114,8 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
   
   /* Style the checkmark/indicator */
   .box-field .checkmark:after {
-	left: 6px;
-    top: 0px;
+	left: 8px;
+    top: 4px;
 	width: 10px;
 	height: 15px;
 	border: solid white;
